[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phospho-run"
version = "0.0.1"
dependencies = [
  "make87[zenoh, protobuf]==0.1.0.dev7",
  "make87_messages",
  "phosphobot",
  "openpi-client>=0.1.0",
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9,<3.13"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = []

[tool.uv.sources]
openpi-client = { git = "https://github.com/phospho-app/openpi.git", subdirectory = "packages/openpi-client", rev = "main" }
